CKAD/definition-files/multicontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <<pod-name>>
  labels:
    app: <<label-value>>
    type: <<label-value>>
spec:
  containers:
    # multiple containers
    - name: nginx-container
      image: nginx
    - name: logging-container
      image: mysql
    - name: database-container
      image: mysql
