CKAD/definition-files/readiness&liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <<pod-name>>
  labels:
    app: <<label-value>>
    type: <<label-value>>
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 8080
      readinessProbe:
        #http
        httpGet:
          path: /api/ready
          port: 8080
        #tcp
        tcpSocket:
          port: 3306
        #command
        exec:
          command:
            - cat
            - /home/is_ready
        initialDelaySeconds: 10 # delay
        periodSeconds: 3 # how often to probe
        failureThreshold: 8 # attempts for the prob e(default 3)
        timeoutSeconds: 2 # second after which probe times out
        successThreshold: 2 # number of successes for it to be successful after it failed
      livenessProbe:
        #http
        httpGet:
          path: /api/ready
          port: 8080
        #tcp
        tcpSocket:
          port: 3306
        #command
        exec:
          command:
            - cat
            - /home/is_ready
        initialDelaySeconds: 10 # delay
        periodSeconds: 3 # how often to probe
        failureThreshold: 8 # attempts for the prob e(default 3)
        timeoutSeconds: 2 # second after which probe times out
        successThreshold: 1 # number of successes for it to be successful (for liveness, default to 1)
