CKAD/definition-files/resourcelimit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <<pod-name>>
  labels:
    app: <<label-value>>
    type: <<label-value>>
spec:
  containers:
    - name: nginx-container
      image: nginx
      resources:
        requests:
          memory: "256Mi"
          cpu: 0.5
        limits:
          memory: "512Mi"
          cpu: 1
