CKAD/definition-files/secret-pod.yaml
apiVersion: v1
metadata:
  labels: 
    name: test-secrets-pod
kind: Pod
spec:
  containers:
    - name: test-secrets-container
      image: python
      # inject whole secret
  volumes:
    - name: app-secret-volumes
      secret:
        secretName: app-secret
