CKAD/definition-files/taint&toleration-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: <<pod-name>>
  labels:
    app: <<label-value>>
    type: <<label-value>>
spec:
  containers:
    - name: nginx-container
      image: nginx
  tolerations:
    - key: "app"
      value: "red"
      operator: "Equal"
      effect: "NoSchedule"
