CKAD/definition-files/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  type: ClusterIP
  selector:
    app: <<app-value>>
    type: <<label-value>>
  ports:
  - port: 80 
    targetPort: 80
