CKAD/definition-files/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  type: NodePort
  selector:
    app: <<app-value>>
    type: <<label-value>>
  ports:
  - port: 80 #only mandatory field
    targetPort: 80
    nodePort: 30008
