CKAD/definition-files/validating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "pod-policy.example.com"
webhooks:
- name: "pod-policy.example.com"
  clientConfig:
    # url: "my-service.com"  if we hosted service externally
    service:
      namespace: "test-ns"
      name: "test-svc"
    caBundle: <CA_BUNDLE> # for tls communication
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
